--- a/src/CommonExtensionsDotNet/CommonExtensionsDotNet.csproj
+++ b/src/CommonExtensionsDotNet/CommonExtensionsDotNet.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <PackageId>CommonExtensionsNetCore</PackageId>
-    <Version>1.0.2-beta</Version>
+    <Version>1.0.3-beta</Version>
     <Authors>CommonExtension</Authors>
     <Company>CommonExtension</Company>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
 </Project>
