--- a/src/CommonExtensionsDotNet/CommonExtensionsDotNet.csproj
+++ b/src/CommonExtensionsDotNet/CommonExtensionsDotNet.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <PackageId>CommonExtensionsNetCore</PackageId>
-    <Version>1.0.3-beta</Version>
+    <PackageId>CommonExtensionsDotNet</PackageId>
+    <Version>1.0.0/Version>
     <Authors>CommonExtension</Authors>
     <Company>CommonExtension</Company>
     <TargetFramework>netstandard2.0</TargetFramework>
